# med-agent-research

./: .gitignore  CLAUDE.md  README.md  demo.html  index.html  package-lock.json  package.json  playwright.config.ts  report.html  vitest.config.ts
api/: openapi.yaml  types.ts
css/: paper-search.css  styles.css  tokens.css
docs/: INTERFACE.md
js/: api.js  app.js  config.js  paper-search.js  report-view.js
server/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/fixtures/: facets.json  papers.json  sjr.json
server/migrations/: 001_init.sql
server/src/: auth.ts  brain.ts  config.ts  errors.ts  fixtures.ts  hub.ts  ids.ts  index.ts  jobs.ts  scheduler.ts  sse.ts  store.ts
server/tests/: aggregator.test.ts  biorxiv.test.ts  cursor.test.ts  fetchMock.ts  hub.test.ts  openalex.test.ts  pubmed.test.ts  queue.test.ts  repo.test.ts  scheduler.test.ts  semanticScholar.test.ts  sjr.test.ts  store.test.ts
synthesis/: README.md  eval_gate.py  pyproject.toml  requirements.txt  run.py
synthesis/corpus_brain/: __init__.py  budget.py  contract.py
synthesis/corpus_brain/eval/: __init__.py  gold.py  harness.py
synthesis/corpus_brain/llm/: __init__.py  anthropic_llm.py  base.py  stub_llm.py
synthesis/corpus_brain/pipeline/: __init__.py  extract.py  grade.py  models.py  orchestrator.py  screen.py  synthesize.py
synthesis/tests/: conftest.py  test_budget_and_eval.py  test_contract.py  test_orchestrator.py  test_pipeline_stages.py  test_synthesize.py
tests/e2e/: search-to-report.spec.ts
tests/unit/: apiBase.test.ts  (+2 more)
(+36 files in other folders)
